# perlin-app

./: .gitignore  658.bundle.js  967.bundle.js  Cargo.toml  README.md  bundle.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: deploy-to-pages.yaml
public/: index.html
src/: lib.rs
www-src/: App.tsx  AppContent.css  AppContent.tsx  AppPage.css  ImageControls.css  ImageControls.tsx  ImageGenerator.css  ImageGenerator.tsx  IntroParagraph.tsx  PerlinImage.css  PerlinImage.tsx  Root.css  Title.tsx  bootstrap.ts  index.tsx
