[package]
name = "wasm-pnoise"
version = "0.1.0"
authors = ["james <tmb18134@uni.strath.ac.uk>"]
repository = "https://github.com/Jmc18134/perlin-app"
license = "MIT"
description = "A library for use through webassembly for generating perlin noise."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen='*'
